Remove remaining File usages